--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,6 +70,9 @@ body {
   background: var(--background);
   color: var(--Army-White);
   font-family: "Army-GI", Arial, Helvetica, sans-serif;
+  @media (max-width: 450px) {
+    background: var(--Primary-Army-Black);
+  }
 }
 
 p {
